modified navbar links

--- a/templates/shop_grid.html
+++ b/templates/shop_grid.html
@@ -24,26 +24,26 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light shop" id="ftco-navbar">
             <div class="container navbar">
-                <a class="navbar-brand" href="home.html">The<span>F</span>armer</a>
+                <a class="navbar-brand" href="#">The<span>F</span>armer</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                     aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="oi oi-menu"></span> Menu
                 </button>
                 <div class="collapse navbar-collapse" id="ftco-nav">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-                        <li class="nav-item"><a href="about.html" class="nav-link">weather</a></li>
-                        <li class="nav-item"><a href="work.html" class="nav-link">Work</a></li>
-                        <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-                        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                        <li class="nav-item active"><a href="{{url_for('user_home_3')}}" class="nav-link">Home</a></li>
+                        <li class="nav-item"><a href="{{url_for('weather')}}" class="nav-link">weather</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Work</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
     <!-- ended navbar -->
-    
-    
+
+
     <!-- ============================================================================================================= -->
 
 
