Now user can update his profile pic

--- a/user_home/templates/user_home/user_home.html
+++ b/user_home/templates/user_home/user_home.html
@@ -35,7 +35,7 @@
                 <div class="container mt-5 pt-5">
                     <div class="row mt-5 pt-5">
                         <div class="col-md-6 col-lg-6 ftco-animate">
-                            <img src="{% static 'images/edited_vali4.png' %}" class="profileimage" alt="">
+                            <img src="{{context.dp}}" class="profileimage" alt="">
                         </div>
                         <div class="col-md-6 col-lg-6 ftco-animate">
                             <div class="overlay-content ml-1 pl-1">
@@ -119,7 +119,7 @@
                                     <div class="col-md-3"><br></div>
                                     <div class="col-md-3">
                                         <a href="#">
-                                            <img src="{% static 'images/edited_vali4.png' %}"
+                                            <img src="{{context.dp}}"
                                                 style="border-radius: 50%; width: 150px; height: 150px;"
                                                 onclick="openNav()" alt="">
                                         </a>
