--- a/user_home/templates/user_home/profile.html
+++ b/user_home/templates/user_home/profile.html
@@ -30,13 +30,12 @@
         <div class="container-login100">
             <div class="wrap-login100">
 
-                <form action="change_dp" method="POST">
-                    {% csrf_token %}
+                <form method="POST" id="change_dp">
                     <label for="image">
-                        <input type="file" onchange="this.form.submit()" accept="image/*" name="profile_pic_of_user"
+                        <input type="file" onchange="loadFile(event)" accept="image/*" name="profile_pic_of_user"
                             id="image" style="display:none;" />
                         <div class="example">
-                            <img src="{% static 'images/edited_vali4.png' %}" />
+                            <img id='dp' src="{{dp}}" />
                             <div class="contents">
                                 <div class="text">Upload photo</div>
                             </div>
@@ -50,124 +49,62 @@
                     <span class="login100-form-title">
                         Profile
                     </span>
-
-                    <div class="wrap-input100 validate-input" data-validate="Valid number is of 10 integers">
-                        <input class="input100" type="text" name="Phone_number" placeholder="Phone Number"
-                            onfocus="this.value=''" value="1234567890">
-                        <span class="focus-input100"></span>
+                    <div class="wrap-input100"
+                        style="background-color:rgb(238, 231, 231);border-radius:20px;padding-bottom:7px;padding-top:7px;">
+                        <p name="name"
+                            style="position: relative; left:70px;font-size:large;font-family:Verdana, Geneva, Tahoma, sans-serif;">
+                            {{phone_number}}</p>
                         <span class="symbol-input100">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                         </span>
                     </div>
-
-                    <div class="wrap-input100 validate-input" data-validate="Name is required">
-                        <input class="input100" type="text" name="name" placeholder="Full Name" onfocus="this.value=''"
-                            value="ooiiii">
-                        <span class="focus-input100"></span>
+                    <div class="wrap-input100"
+                        style="background-color:rgb(238, 231, 231);border-radius:20px;padding-bottom:7px;padding-top:7px;">
+                        <p name="name"
+                            style="position: relative; left:70px;font-size:large;font-family:Verdana, Geneva, Tahoma, sans-serif;">
+                            {{name}}</p>
                         <span class="symbol-input100">
                             <i class="fa fa-user" aria-hidden="true"></i>
                         </span>
                     </div>
-
-
-                    <div class="wrap-input100">
-                        <input class="input100" type="text" name="Location" placeholder="Location"
-                            onfocus="this.value=''" value="Moon">
-                        <span class="focus-input100"></span>
+                    <div class="wrap-input100"
+                        style="background-color:rgb(238, 231, 231);border-radius:20px;padding-bottom:7px;padding-top:7px;">
+                        <p name="name"
+                            style="position: relative; left:70px;font-size:large;font-family:Verdana, Geneva, Tahoma, sans-serif;">
+                            {{status}} </p>
+                        <span class="symbol-input100">
+                            <i class="fa fa-user" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                    <div class="wrap-input100"
+                        style="background-color:rgb(238, 231, 231);border-radius:20px;padding-bottom:7px;padding-top:7px;">
+                        <p name="name"
+                            style="position: relative; left:70px;font-size:large;font-family:Verdana, Geneva, Tahoma, sans-serif;">
+                            {{location}} </p>
                         <span class="symbol-input100">
                             <i class="fa fa-map-marker" aria-hidden="true"></i>
                         </span>
                     </div>
 
-                    <!-- <div class="wrap-input100" style="outline: none;">
-                        <select class="input100" name="Language" placeholder="Language">
-                            <option value="English">English</option>
-                            <option value="Hindi">Hindi</option>
-                            <option value="Punjabi">Punjabi</option>
-                            <option value="Marathi">Marathi</option>
-                        </select>
-                        <span class="focus-input100"></span>
-                        <span class="symbol-input100">
-                            <i class="fa fa-language" aria-hidden="true"></i>
-                        </span>
-                    </div> -->
 
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="container-login100-form-btn">
-                                <button class="login100-form-btn">
-                                    Submit
-                                </button>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="container-login100-form-btn">
-                                <button class="login100-form-btn">
-                                    Cancel
-                                </button>
-                            </div>
-                        </div>
-                    </div>
 
                 </form>
             </div>
             <div class="wrap-login100 mt-5 pt-5">
                 <table id="customers">
                     <tr>
-                        <th style="border-top-left-radius: 15px;">Company</th>
-                        <th>Contact</th>
-                        <th style="border-top-right-radius: 15px;">Country</th>
+                        <th style="border-top-left-radius: 15px;">Category</th>
+                        <th>Date / Time</th>
+                        <th style="border-top-right-radius: 15px;">Status</th>
                     </tr>
+
+                    {% for data in loan_and_insurance_data %}
                     <tr>
-                        <td>Alfreds Futterkiste</td>
-                        <td>Maria Anders</td>
-                        <td>Germany</td>
+                        <td>{{data.form_type}}</td>
+                        <td>{{data.date}} / {{data.time}} </td>
+                        <td>{{data.STATUS}}</td>
                     </tr>
-                    <tr>
-                        <td>Berglunds snabbköp</td>
-                        <td>Christina Berglund</td>
-                        <td>Sweden</td>
-                    </tr>
-                    <tr>
-                        <td>Centro comercial Moctezuma</td>
-                        <td>Francisco Chang</td>
-                        <td>Mexico</td>
-                    </tr>
-                    <tr>
-                        <td>Ernst Handel</td>
-                        <td>Roland Mendel</td>
-                        <td>Austria</td>
-                    </tr>
-                    <tr>
-                        <td>Island Trading</td>
-                        <td>Helen Bennett</td>
-                        <td>UK</td>
-                    </tr>
-                    <tr>
-                        <td>Königlich Essen</td>
-                        <td>Philip Cramer</td>
-                        <td>Germany</td>
-                    </tr>
-                    <tr>
-                        <td>Laughing Bacchus Winecellars</td>
-                        <td>Yoshi Tannamuri</td>
-                        <td>Canada</td>
-                    </tr>
-                    <tr>
-                        <td>Magazzini Alimentari Riuniti</td>
-                        <td>Giovanni Rovelli</td>
-                        <td>Italy</td>
-                    </tr>
-                    <tr>
-                        <td>North/South</td>
-                        <td>Simon Crowther</td>
-                        <td>UK</td>
-                    </tr>
-                    <tr>
-                        <td style="border-bottom-left-radius: 15px;">Paris spécialités</td>
-                        <td>Marie Bertrand</td>
-                        <td style="border-bottom-right-radius: 15px;">France</td>
-                    </tr>
+                    {% endfor %}
                 </table>
             </div>
         </div>
@@ -215,13 +152,50 @@
     <script src="{% static 'js\google-map.js' %}"></script>
     <script src="{% static 'js\main.js' %}"></script>
 
+    <!-- VERY VERY IMPORTANT FOR ajax -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script>
+        var images;
+        function update_dp() {
+            // alert("Update dp call hua hai");
+            new_dp = document.getElementById("dp").src;
+            omg = document.getElementById("dp").src;
+            // alert("omg   " + omg)
+            // alert(new_dp);
+            $.ajax({
+                url: "{% url 'user_home:change_dp' %}",
+                type: 'POST',
+                data: {
+                    'csrfmiddlewaretoken': '{{csrf_token}}',
+                    'new_dp': images,
+                },
+                dataType: 'json',
+                success: function (resp) {
+                    alert("success");
+
+                }
+
+            });
+
+
+        };
+        function loadFile(event) {
+            // alert("loadFile call hua hai");
+            var file = $("input[type=file]").get(0).files[0];
+            var reader = new FileReader();
+            reader.onload = function (event) {
+                $("#dp").attr("src", reader.result);
+                images = reader.result;
+                // alert('reader call hua hai');
+                update_dp();
+            }
+            reader.readAsDataURL(event.target.files[0]);
+        };
+
+    </script>
+
+
 </body>
 
 </html>
-
-
-<!-- <h2>Sign up</h2>
-<form method="post">
-  {% csrf_token %} {{ form.as_p }}
-  <button type="submit">Sign up</button>
-</form> -->
