--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14346,16 +14346,21 @@ body {
 #customers td,
 #customers th {
   /* border: 1px solid #ddd; */
+  color: rgb(36,35,35);
   padding: 8px;
   /* border-radius:25px; */
 }
 
 #customers tr:nth-child(even) {
-  background-color: #f2f2f2;
+  background-color: rgb(255 , 255 , 255);
+}
+
+#customers tr:nth-child(odd) {
+  background-color: rgb(226, 226, 226);
 }
 
 #customers tr:hover {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(131 , 131 , 131);
   color: #fff;
   transition-delay: 0s;
   transition-duration: 0.8s;
@@ -14364,7 +14369,7 @@ body {
 #customers th {
   padding-top: 12px;
   padding-bottom: 12px;
-  text-align: left;
+  text-align: center;
   background-color: #4caf50;
   color: white;
 }
